# hearkit

./: .gitignore  Cargo.toml  justfile
.github/workflows/: release.yml
crates/hearkit-app/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
crates/hearkit-app/capabilities/: default.json
crates/hearkit-app/icons/: icon.icns
crates/hearkit-app/src/: commands.rs  main.rs  state.rs
crates/hearkit-audio/: Cargo.toml
crates/hearkit-audio/src/: capture.rs  lib.rs  mixer.rs  writer.rs
crates/hearkit-core/: Cargo.toml
crates/hearkit-core/src/: config.rs  lib.rs  pipeline.rs  storage.rs
crates/hearkit-llm/: Cargo.toml
crates/hearkit-llm/src/: claude.rs  gemini.rs  lib.rs  openai.rs
crates/hearkit-notify/: Cargo.toml
crates/hearkit-notify/src/: discord.rs  email.rs  lib.rs  mattermost.rs  slack.rs
crates/hearkit-transcribe/: Cargo.toml
crates/hearkit-transcribe/src/: lib.rs
ui/: index.html
