[package]
name = "hearkit-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hearkit-core.workspace = true
hearkit-llm.workspace = true
hearkit-notify.workspace = true
hearkit-transcribe.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
