[package]
name = "hearkit-llm"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait = "0.1"
reqwest.workspace = true
hearkit-transcribe.workspace = true
